# Fungoid

./: CHANGELOG.md  Fungoid.cabal  LICENSE  README.md  cabal.project  default.nix  fungoid.nix  stack.yaml
.github/workflows/: ci.yml
app/: Fungoid.hs
b93/: helloworld.b93
etc/: Dockerfile
lib/Fungoid/: Instructions.hs  Interpreter93.hs  Machine.hs  Stack.hs  Torus.hs
