cabal-version:       2.4

name:                Fungoid
version:             0.1.0.0
synopsis:            Befunge-93 interpreter written in Haskell!
description:         Befunge-93 interpreter written in Haskell!
homepage:            https://github.com/PureFunctor/Fungoid
license:             MIT
license-file:        LICENSE
author:              PureFunctor
copyright:           Copyright (c) 2020 PureFunctor
category:            Interpreter
extra-source-files:  CHANGELOG.md, README.md


library
  exposed-modules:     Fungoid.Instructions,
                       Fungoid.Machine,
                       Fungoid.Stack,
                       Fungoid.Torus
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0,
                       bytestring >= 0.10.8 && < 0.11,
                       containers >= 0.6.0 && < 0.7,
                       mtl >= 2.2.2 && < 2.3,
                       random==1.1
  hs-source-dirs:      lib
  default-language:    Haskell2010


executable Fungoid
  main-is:             Fungoid.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0, Fungoid
  hs-source-dirs:      app
  default-language:    Haskell2010


test-suite Fungoid-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base ^>=4.12.0.0
