cabal-version:       2.4

name:                Fungoid
version:             0.1.0.0
synopsis:            Befunge-93 interpreter written in Haskell!
description:         Befunge-93 interpreter written in Haskell!
homepage:            https://github.com/PureFunctor/Fungoid
license:             MIT
license-file:        LICENSE
author:              PureFunctor
copyright:           Copyright (c) 2020 PureFunctor
category:            Interpreter
extra-source-files:  CHANGELOG.md, README.md


library
  exposed-modules:     Fungoid.Interpreter93,
                       Fungoid.Instructions,
                       Fungoid.Machine,
                       Fungoid.Stack,
                       Fungoid.Torus
  build-depends:       base,
                       bytestring,
                       containers,
                       mtl,
                       random
  hs-source-dirs:      lib
  default-language:    Haskell2010


executable Fungoid
  main-is:             Fungoid.hs
  build-depends:       base,
                       bytestring,
                       Fungoid
  hs-source-dirs:      app
  default-language:    Haskell2010

